--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!------------------------------------------------------------------------------
       Styles CSS
     --------------------------------------------------------------------------------->
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -86,7 +86,7 @@
     --------------------------------------------------------------------------------->
     <section id="home">
       <video controls="" autoplay="" muted="" loop="">
-        <source src="/images/video.mp4" type="video/mp4" />
+        <source src="./images/video.mp4" type="video/mp4" />
       </video>
 
       <div class="container">
@@ -136,7 +136,7 @@
             <div class="project-item">
               <a href="images/project-image1.jpg">
                 <img
-                  src="/images/project-image1.jpg"
+                  src="./images/project-image1.jpg"
                   alt="images-project"
                   class="img-fluid"
                 />
@@ -154,7 +154,7 @@
             <div class="project-item">
               <a href="images/project-image2.jpg">
                 <img
-                  src="/images/project-image2.jpg"
+                  src="./images/project-image2.jpg"
                   alt="images-project"
                   class="img-fluid"
                 />
@@ -172,7 +172,7 @@
             <div class="project-item">
               <a href="images/project-image3.jpg">
                 <img
-                  src="/images/project-image3.jpg"
+                  src="./images/project-image3.jpg"
                   alt="images-project"
                   class="img-fluid"
                 />
@@ -190,7 +190,7 @@
             <div class="project-item">
               <a href="images/project-image4.jpg">
                 <img
-                  src="/images/project-image4.jpg"
+                  src="./images/project-image4.jpg"
                   alt="images-project"
                   class="img-fluid"
                 />
@@ -219,37 +219,37 @@
         <div class="swiper-container mySwiper py-5">
           <div class="swiper-wrapper">
             <div class="swiper-slide col-lg-3 col-md-6 col-12">
-              <img src="/images/team3.jpg" alt="team" class="img-fluid" />
+              <img src="./images/team3.jpg" alt="team" class="img-fluid" />
               <div class="text pt-2">
                 <h3>Anne Clarkson<br /><span>Web Designer</span></h3>
               </div>
             </div>
             <div class="swiper-slide col-lg-3 col-md-6 col-12">
-              <img src="/images/team4.jpg" alt="team" class="img-fluid" />
+              <img src="./images/team4.jpg" alt="team" class="img-fluid" />
               <div class="text pt-2">
                 <h3>Shanya Jonson<br /><span>Web Developer</span></h3>
               </div>
             </div>
             <div class="swiper-slide col-lg-3 col-md-6 col-12">
-              <img src="/images/team5.jpg" alt="team" class="img-fluid" />
+              <img src="./images/team5.jpg" alt="team" class="img-fluid" />
               <div class="text pt-2">
                 <h3>Silvia Alvarez<br /><span>Founder</span></h3>
               </div>
             </div>
             <div class="swiper-slide col-lg-3 col-md-6 col-12">
-              <img src="/images/team6.jpg" alt="team" class="img-fluid" />
+              <img src="./images/team6.jpg" alt="team" class="img-fluid" />
               <div class="text pt-2">
                 <h3>Anne Clarkson<br /><span>Engenier SEO</span></h3>
               </div>
             </div>
             <div class="swiper-slide col-lg-3 col-md-6 col-12">
-              <img src="/images/team1.jpg" alt="team" class="img-fluid" />
+              <img src="./images/team1.jpg" alt="team" class="img-fluid" />
               <div class="text pt-2">
                 <h3>Anne Clarkson<br /><span>Marketing</span></h3>
               </div>
             </div>
             <div class="swiper-slide col-lg-3 col-md-6 col-12">
-              <img src="/images/team2.jpg" alt="team" class="img-fluid" />
+              <img src="./images/team2.jpg" alt="team" class="img-fluid" />
               <div class="text pt-2">
                 <h3>Anne Clarkson<br /><span>Web Designer</span></h3>
               </div>
